# scientificCalculator-C

./: CMakeLists.txt  README.md  complex.c  complex.h  fraction.c  fraction.h  integer.c  integer.h  main.c  main.h  matrix.c  matrix.h  real.c  real.h
